--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Linda Bhengu-Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
@@ -12,20 +13,20 @@
   </header>
   
   <section class="about">
-    <h2>About me</h2>
-    <p>I am a beginner software developer where I have learnt to code through the FNB App Academy</p>
+    <h2>ABOUT ME</h2>
+    <p>I am a beginner software developer where I have learnt to code through the FNB App Academy.</p>
 
   </section>
 
   <section class="projects">
-    <h2>Projects</h2>
+    <h2>PROJECTS</h2>
     <ul>
-        <li>Avengers Info Menu</li>
+        <li>Heroes Info Menu</li>
     </ul>
   </section>
 
   <footer>
-    <p>Contact me on: +24 68 170 1188, Email: linbuilds@gmail.com</p>
+    <p>Contact me on: (+24) 68 170 1188 | |  Email: linbuilds@gmail.com</p>
   </footer>
 </body>
 </html>
