--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   
   <section class="about">
     <h2>ABOUT ME</h2>
-    <p>I am a beginner software developer where I have learnt to code through the FNB App Academy.</p>
+    <p>I am a junior software developer where I have learnt to code through the FNB App Academy.</p>
 
   </section>
 
