--- a/index.html
+++ b/index.html
@@ -14,19 +14,29 @@
   
   <section class="about">
     <h2>ABOUT ME</h2>
-    <p>I am a junior software developer where I have learnt to code through the FNB App Academy.</p>
+    <p>I am a junior software developer. I have learnt to code through the FNB App Academy.</p>
 
   </section>
 
   <section class="projects">
     <h2>PROJECTS</h2>
-    <ul>
-        <li>Heroes Info Menu</li>
-    </ul>
+    <div class="project-list">
+<div class="project-card">
+<h3>Hero Info Menu</h3>
+<p>An interactive menu that reveals a short summary for each Marvel character shown.</p>
+<a href="#">View Project</a>
+</div>
+</div>
   </section>
 
   <footer>
     <p>Contact me on: (+24) 68 170 1188 | |  Email: linbuilds@gmail.com</p>
+    <p>© 2025 Linda Bhengu</p>
+    <div class="social-links">
+      <a href="https://github.com/LinInTech/"
+      target="_blank">github</a>
+
+    </div>
   </footer>
 </body>
 </html>
