Added project link to portfolio

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <div class="project-card">
 <h3>Hero Info Menu</h3>
 <p>An interactive menu that reveals a short summary for each Marvel character shown.</p>
-<a href="#">View Project</a>
+<a href="https://heroinfomenu.netlify.app/" target="_blank">View Project</a>
 </div>
 </div>
   </section>
