New project added

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
 <p>An interactive menu that reveals a short summary for each Marvel character shown.</p>
 <a href="https://heroinfomenu.netlify.app/" target="_blank">View Project</a>
 </div>
+ <div class="project-list">
+<div class="project-card">
+<h3>Pine City Zoo App</h3>
+<p>A fictional zoo visitor app designed to help tourists and visitors explore the zoo.</p>
+<a href="https://pinecityzooapp.netlify.app/" target="_blank">View Project</a>
 </div>
   </section>
 
