Calculator app added and personal information updated

--- a/index.html
+++ b/index.html
@@ -32,10 +32,16 @@
 <p>A fictional zoo visitor app designed to help tourists and visitors explore the zoo.</p>
 <a href="https://pinecityzooapp.netlify.app/" target="_blank">View Project</a>
 </div>
+<div class="project-list">
+<div class="project-card">
+<h3>Cutesy Calculator</h3>
+<p>A functional calculator app built for basic math operations.</p>
+<a href="https://cutesycalculator.netlify.app/" target="_blank">View Project</a>
+</div>
   </section>
 
   <footer>
-    <p>Contact me on: (+24) 68 170 1188 | |  Email: linbuilds@gmail.com</p>
+    <p>Contact me on: (+24) 68 170 1188 | |  Email: lindaibhengu@gmail.com</p>
     <p>© 2025 Linda Bhengu</p>
     <div class="social-links">
       <a href="https://github.com/LinInTech/"
