Cutesy contact book app added

--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
 <p>A functional calculator app built for basic math operations.</p>
 <a href="https://cutesycalculator.netlify.app/" target="_blank">View Project</a>
 </div>
+<div class="project-list">
+<div class="project-card">
+<h3>Cutesy Contact Book App</h3>
+<p>A contact book app used for creating, storing and managing contact information.</p>
+<a href="https://cutesycontactbookapp.netlify.app/" target="_blank">View Project</a>
+</div>
   </section>
 
   <footer>
