Renamed background image

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SITES BY LIN</title>
+    <title>LINSITES</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>SITES BY LIN</h1>
+    <h1>LINSITES</h1>
     <p class="tagline">Turning your insights into websites.</p>
   </header>
   
@@ -55,7 +55,7 @@
 
   <footer>
     <p>Contact me on: (+24) 67 964 8520 | Email: sitesbylin@gmail.com</p>
-    <p>© 2025 Sites By Lin</p>
+    <p>© 2025 Linsites</p>
     <div class="social-links">
       <a href="https://github.com/LinInTech/" target="_blank">github</a>
     </div>
