--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </header>
   
   <section class="about">
-    <h2>ABOUT US</h2>
+    <h2>ABOUT ME</h2>
     <p>Hi there, my name is Lin and I am a full stack developer who specializes in web development and UX design. </p>
     <p>I work closely with individuals, startups and small businesses to bring their digital ideas to life, whether that means building a modern day website from scratch, refreshing an existing design or helping with ongoing updates.</p>
     <p>My approach is simple: Gain as much insight from you as possible and then create your dream website!</p>
