--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
       </div>
       
       <div class="project-card">
-        <h3>Pine City Zoo App</h3>
+        <h3>Pine City Zoo Website</h3>
         <p>A zoo visitor app designed to help tourists and visitors explore the zoo.</p>
         <a href="https://pinecityzooapp.netlify.app/" target="_blank">View Project</a>
       </div>
       
       <div class="project-card">
-        <h3>Contact Book App</h3>
+        <h3>Contact Book Website</h3>
         <p>A contact book app used for creating, storing and managing contact information.</p>
         <a href="https://cutesycontactbookapp.netlify.app/" target="_blank">View Project</a>
       </div>
