Edited footer details

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
   </section>
 
   <footer>
-    <p>Contact me on: (+24) 67 964 8520 | Email: sitesbylin@gmail.com</p>
+    <p>For more insight contact me on:</p>
+    <p>(+24) 67 964 8520 | Email: sitesbylin@gmail.com</p>
     <p>© 2025 Linsites</p>
     <div class="social-links">
       <a href="https://github.com/LinInTech/" target="_blank">github</a>
