--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <footer>
     <p>For more insight contact me on:</p>
     <p>(+24) 67 964 8520 | Email: sitesbylin@gmail.com</p>
-    <p>© 2025 Linsites</p>
+    <p>© 2025 LINSITES</p>
     <div class="social-links">
       <a href="https://github.com/LinInTech/" target="_blank">github</a>
     </div>
